--- a/app/views/home/open.html.erb
+++ b/app/views/home/open.html.erb
@@ -1,1 +1,45 @@
-<h1>Hello</h1>
+<!DOCTYPE html>
+<html>
+<head>
+</head>
+<body>
+<div id="main-container" class="container">
+      <div class="row">
+        <div class="col-xs-3">
+          <h3>Tealeaf Academy Todo</h3>
+        </div>
+        <div class="col-xs-9">
+          <%= yield %>
+        </div>
+      </div>
+    </div>
+
+<div class="container">
+<div class="head">
+<div class="menu">
+	<ul>
+<li class="item"><a href="take_test.html">Take Test</a></li>
+		<li class="item"><a href="conc.html">Contact</a></li>
+		<li class="item"><a href="syllabus.html">Syllabus</a></li>
+		<li class="item"><a href="scholar.html">Scholarships</a></li>
+	</ul>	
+</div>
+<div class="ser">
+<table cellpadding="0px" cellspacing="0px">
+	<tr>
+	<td style="font-family:verdana">search:</td>
+	<td id="search" style="border-style:none;border-color:#CCCCCC;border-width:1px;">
+	<input type="text" name="search" style="width:200px; height:25px; padding:0px 3px; position:relative;border-radius:20px;">
+	</td>
+	<td style="border-style:none;border-color:#CCCCCC;border-width:0px;"> 
+	<input type="submit" value="" style="border-style: none; background: url('search1.png') no-repeat; width: 24px; height: 22px;padding:0px;margin:0px;position:relative">
+	</td>
+	</tr>
+	</table>
+	</div>
+	
+	
+	</div>
+</div>
+</body>
+</html>
