--- a/app/assets/stylesheets/test.scss
+++ b/app/assets/stylesheets/test.scss
@@ -1,3 +1,176 @@
 // Place all the styles related to the Test controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+body{
+padding:0px;
+margin:0px;
+}
+ul{
+list-style-type:none;
+padding:0px;
+margin:0px;
+}
+a{
+text-decoration:none;
+color:black;
+}
+p{
+padding:0px;
+}
+h2{
+font-family:grande;
+color:red;
+}
+.canvas{
+padding:0px;
+margin:0px;
+height:1500px;
+width:1350px;
+}
+.home_head{
+width:1350px;
+height:500px;
+background-image:url(back.jpg);
+}
+.head{
+width:1350px;
+height:200px;
+background-image:url(raji8.jpg);
+
+}
+.form{
+padding:0px 0px 0px 0px;
+margin-left:1000px;
+float:right;
+width:200px;
+height:300px;
+color:white;
+}
+.menu_home{
+padding-left:200px;
+
+padding-right:200px;
+width:1350px;
+height:200px;
+float:right;
+}
+.menu{
+padding-left:400px;
+padding-top:30px;
+padding-right:200px;
+width:1350px;
+height:80px;
+float:right;
+}
+.side{
+padding:0px;
+margin-top:45px;
+width:200px;
+height:800px;
+font-family:papyrus;
+font-weight:bold;
+font-size:20px;
+background-color:#e2e2eb;
+}
+.item{
+font-family:gill sans,veradona;
+font-size:25px;
+float:right;
+padding:30px;
+
+}
+.item:hover{
+color:#e2e2eb;
+}
+.it{
+margin:10px;
+width:200px;
+height:20px;
+color:black;
+float:left;
+font-size:20px;
+}
+.sign{
+padding:0px;
+color:white;
+margin:0px;
+height:700px;
+background-color:blue;
+}
+.main{
+width:500px;
+float:right;
+color:black;
+font-size:20px;
+}
+.ser{
+padding:0px;
+margin:0px;
+width:400px;
+height:50px;
+float:right;
+}
+.gallery{
+border-style:none;
+border-radius:10px;
+margin-left:0px;
+padding-top:30px;
+width:1100px;
+height:1350px;
+float:left;
+}
+.photo{
+margin:20px 0px 0px 20px;
+width:300px;
+height:100px;
+float:left;
+padding-top:10px;
+text-align:center;
+border-style: solid 1px black;
+border-width: medium;
+border-radius:15px;
+background-image:url(res_back1.jpeg);
+font-family:terbuchet;
+font-size:20px;
+font-weight:bold;
+}
+.text{
+font-family:serif;
+font-size:20px;
+font-weight:bold;
+	text-align: center;
+    font-weight: normal;
+	font-size:25px;
+    margin-top:5px;
+	}
+	.rest{
+	width:1100px;
+	height:1000px;
+	padding-top:100px;
+	margin-top:40px;
+	margin-left:50px;
+	}
+	.res_main
+	{
+	padding:0px;
+	width:1150px;
+	height:1000px;
+	margin-left:200px;
+	background-image:url(rest2.jpeg);
+	}
+.hotel{
+margin:20px 20px 20px 20px;
+	width:300px;
+	height:150px;
+	border-radius:10px;
+	background-image:url(res_back.jpeg);
+	float:right;
+	}
+.must_visit{
+
+margin-left:-200px;
+width:1000px;
+height:150px;
+border:solid 1px orange;
+}
