--- a/app/views/home/open.html.erb
+++ b/app/views/home/open.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>SWIFT girls</title>
+		<title>SMS</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
@@ -16,28 +16,13 @@
 					
 					<nav id="nav">
 						<ul>
-							<li><a href="scholarship.html">Scholarship</a></li>
-							<li><a href="test.html">Test </a></li>
+							<li><a href="scholar.html">Scholarship</a></li>
+							<li><a href="take_test.html">Test </a></li>
 							<li><a href="syllabus.html">Syllabus</a></li>
 							<li>
-								<a href="#">Home</a>
-								<ul>
-									<li><a href="left-sidebar.html">Left Sidebar</a></li>
-									<li><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li><a href="no-sidebar.html">No Sidebar</a></li>
-									<li>
-										<a href="#">Submenu</a>
-										<ul>
-											<li><a href="#">Option 1</a></li>
-											<li><a href="#">Option 2</a></li>
-											<li><a href="#">Option 3</a></li>
-											<li><a href="#">Option 4</a></li>
-										</ul>
-									</li>
-								</ul>
+								<a href="/">Home</a>
 							</li>
-							<li><a href="elements.html">Elements</a></li>
-							<li><a href="#" class="button special">Sign Up</a></li>
+							<li><a href="/users/sign_up" class="button special">Sign Up</a></li>
 						</ul>
 					</nav>
 				</header>
@@ -63,20 +48,15 @@
 							<div class="row">
 								<div class="4u 12u$(medium)">
 									<header>
-										<h2>Scholrship</h2>
-										<p>Free Software Foundation Tamil Nadu (FSFTN), part of Free Software Movement of India (FSMI)</p>
+										<h2>About</h2>
+										<p>Worried about Paying your fees?We are here to help you out.</p>
 									</header>
 								</div>
 								<div class="4u 12u$(medium)">
-									<p>It is a social movement which has pledged to enlighten common man 
-									with the essence of Free Software and   join   hands   together   
-									against   the   proprietary   software   which   restricts   freedom  
-									 of knowledge to the common man.</p>
+									<p>This is a place where you can access all available scholarships in your college.It allows Your to find the best scholarship for your criteria.</p>
 								</div>
 								<div class="4u$ 12u$(medium)">
-									<p>FSFTN was founded in 2008. It is a nonprofit organization with a 
-									mission to promote computer user freedom and to defend the rights of
-									 all free software users.It is a registered society in TamilNadu.</p>
+									<p></p>
 								</div>
 							</div>
 						</div>
@@ -89,10 +69,10 @@
 					<span class="image fit main"><img src="images/pic03.jpg" alt="" height="620" width="413" /></span>
 					<div class="content">
 						<header>
-							<h2>Interdum amet non magna accumsan</h2>
-							<p>Nunc commodo accumsan eget id nisi eu col volutpat magna</p>
+							<h2>CM Award</h2>
+							<p>Scholarship For District Toppers</p>
 						</header>
-						<p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p>
+						<p>Are you a District topper? Then You are by default eligible for this Scholarship. Avail it before You Miss out.</p>
 						
 					</div>
 					<a href="#three" class="goto-next scrolly">Next</a>
@@ -103,10 +83,10 @@
 					<span class="image fit main bottom"><img src="images/pic04.jpg" alt="" /></span>
 					<div class="content">
 						<header>
-							<h2>Interdum felis blandit praesent sed augue</h2>
-							<p>Accumsan integer ultricies aliquam vel massa sapien phasellus</p>
+							<h2>First Graduate</h2>
+							<p></p>
 						</header>
-						<p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p>
+						<p>A great oppurtunity for the first graduates.</p>
 						
 					</div>
 					<a href="#four" class="goto-next scrolly">Next</a>
@@ -123,15 +103,15 @@
 							<div class="row uniform">
 								<section class="4u 6u(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-area-chart"></span>
-									<h3>Open Content</h3>
-									<p>Most content, articles, graphics, documents and source code are free (libre) and hosted on our GitHub repository. Check it out..</p>
-									<a href="https://github.com/fsftn" class="button special">GitHub</a>
+									<h3>Provider</h3>
+									<p>Are You a Scholarship Provider?Do Update Your Criteria Here.</p>
+									<a href="https://github.com/fsftn" class="button special">Add Scholarship</a>
 								</section>
 								<section class="4u 6u$(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-comment"></span>
-									<h3>Community</h3>
-									<p>Join our community of Free Software enthusiasts and geeks. </p>
-									<a href="http://fsftn.org/mailman/listinfo/mailinglist_fsftn.org" class="button special">Mailing List</a>
+									<h3>Student</h3>
+									<p>Join our community to Help Out your fellow Buddies. </p>
+									<a href="http://fsftn.org/mailman/listinfo/mailinglist_fsftn.org" class="button special">Contribute</a>
 								</section>
 								<section class="4u 6u$(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-comment"></span>
@@ -150,8 +130,8 @@
 				<section id="five" class="wrapper style2 special fade">
 					<div class="container">
 						<header>
-							<h2>Magna faucibus lorem diam</h2>
-							<p>Ante metus praesent faucibus ante integer id accumsan eleifend</p>
+							<h2>Join Our Mailing List</h2>
+							<p>Receive updates About New Scholarships</p>
 						</header>
 						<form method="post" action="#" class="container 50%">
 							<div class="row uniform 50%">
@@ -161,7 +141,9 @@
 						</form>
 					</div>
 				</section>
-
+				<div>
+				<a href="/users/sign_out" class="button special">Logout</a>
+				</div>
 			<!-- Footer -->
 				<footer id="footer">
 					<ul class="icons">
