--- a/app/views/scholarship/scholar.html.erb
+++ b/app/views/scholarship/scholar.html.erb
@@ -1,7 +1,4 @@
 
-
-
-
 <!DOCTYPE HTML>
 <!--
 	Landed by HTML5 UP
@@ -10,14 +7,13 @@
 -->
 <html>
 	<head>
-		<title>SWIFT girls</title>
+		<title>Scholarships</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		
 		<%= stylesheet_link_tag    "scholarship", :media => "all" %>
 		
 	</head>
-	<body class="landing">
+	<body>
 		<div id="page-wrapper">
 
 			<!-- Header -->
@@ -25,163 +21,40 @@
 					
 					<nav id="nav">
 						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li><a href="contact.html">contact </a></li>
-							<li><a href="about.html">about</a></li>
+							<li><a href="scholar.html">Scholarship</a></li>
+							<li><a href="take_test.html">Test </a></li>
+							<li><a href="syllabus.html">Syllabus</a></li>
 							<li>
-								<a href="#">Layouts</a>
-								<ul>
-									<li><a href="left-sidebar.html">Left Sidebar</a></li>
-									<li><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li><a href="no-sidebar.html">No Sidebar</a></li>
-									<li>
-										<a href="#">Submenu</a>
-										<ul>
-											<li><a href="#">Option 1</a></li>
-											<li><a href="#">Option 2</a></li>
-											<li><a href="#">Option 3</a></li>
-											<li><a href="#">Option 4</a></li>
-										</ul>
-									</li>
-								</ul>
+								<a href="/">Home</a>
 							</li>
-							<li><a href="elements.html">Elements</a></li>
-							<li><a href="#" class="button special">Sign Up</a></li>
+							<li><a href="new.html" class="button special">Sign Up</a></li>
 						</ul>
 					</nav>
 				</header>
 
-			<!-- Banner -->
-				<section id="banner">
-					<div class="content">
-						<header>
-							<h2>S.W.I.F.T Women In Freedom Tecnology</h2>
-							<p>This organisation is come under FSFTN(Free Software Foundation Tamilnadu).<br />
-							To motivate and engage WOMEN participants in Free Software Technology.</p>
-						</header>
-						<span class="image"><img src="images/pic01.jpg" alt="" /></span>
-					</div>
-					<a href="#one" class="goto-next scrolly">Next</a>
-				</section>
-
-			<!-- One -->
-				<section id="one" class="spotlight style1 bottom">
-					<span class="image fit main"><img src="images/pic02.jpg" alt="" /></span>
-					<div class="content">
-						<div class="container">
-							<div class="row">
-								<div class="4u 12u$(medium)">
-									<header>
-										<h2>FSFTN</h2>
-										<p>Free Software Foundation Tamil Nadu (FSFTN), part of Free Software Movement of India (FSMI)</p>
-									</header>
-								</div>
-								<div class="4u 12u$(medium)">
-									<p>It is a social movement which has pledged to enlighten common man 
-									with the essence of Free Software and   join   hands   together   
-									against   the   proprietary   software   which   restricts   freedom  
-									 of knowledge to the common man.</p>
-								</div>
-								<div class="4u$ 12u$(medium)">
-									<p>FSFTN was founded in 2008. It is a nonprofit organization with a 
-									mission to promote computer user freedom and to defend the rights of
-									 all free software users.It is a registered society in TamilNadu.</p>
-								</div>
-							</div>
-						</div>
-					</div>
-					<a href="#two" class="goto-next scrolly">Next</a>
-				</section>
-
-			<!-- Two -->
-				<section id="two" class="spotlight style2 right">
-					<span class="image fit main"><img src="images/pic03.jpg" alt="" height="620" width="413" /></span>
-					<div class="content">
-						<header>
-							<h2>Interdum amet non magna accumsan</h2>
-							<p>Nunc commodo accumsan eget id nisi eu col volutpat magna</p>
-						</header>
-						<p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p>
-						
-					</div>
-					<a href="#three" class="goto-next scrolly">Next</a>
-				</section>
-
-			<!-- Three -->
-				<section id="three" class="spotlight style3 left">
-					<span class="image fit main bottom"><img src="images/pic04.jpg" alt="" /></span>
-					<div class="content">
-						<header>
-							<h2>Interdum felis blandit praesent sed augue</h2>
-							<p>Accumsan integer ultricies aliquam vel massa sapien phasellus</p>
-						</header>
-						<p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p>
-						
-					</div>
-					<a href="#four" class="goto-next scrolly">Next</a>
-				</section>
-
-			<!-- Four -->
-				<section id="four" class="wrapper style1 special fade-up">
+			<!-- Main -->
+				<div id="main" class="wrapper style1">
 					<div class="container">
 						<header class="major">
-							<h2>Communicate with us</h2>
-							<p>Ways to get through in our society</p>
+							<h2>Scholarships</h2>
+							
 						</header>
-						<div class="box alt">
-							<div class="row uniform">
-								<section class="4u 6u(medium) 12u$(xsmall)">
-									<span class="icon alt major fa-area-chart"></span>
-									<h3>Open Content</h3>
-									<p>Most content, articles, graphics, documents and source code are free (libre) and hosted on our GitHub repository. Check it out..</p>
-									<a href="https://github.com/fsftn" class="button special">GitHub</a>
-								</section>
-								<section class="4u 6u$(medium) 12u$(xsmall)">
-									<span class="icon alt major fa-comment"></span>
-									<h3>Community</h3>
-									<p>Join our community of Free Software enthusiasts and geeks. </p>
-									<a href="http://fsftn.org/mailman/listinfo/mailinglist_fsftn.org" class="button special">Mailing List</a>
-								</section>
-								<section class="4u 6u$(medium) 12u$(xsmall)">
-									<span class="icon alt major fa-comment"></span>
-									<h3>Got a Query</h3>
-									<p>We're listening. Send feedback, criticism or simply say hi!.</p>
-									<a href="https://github.com/fsftn" class="button special">Mailing Us</a>
-								</section>
-								
-							</div>
-						</div>
+						
+							
+							<div class="8u$ 12u$(medium) important(medium)">
+
+								<!-- Content -->
+									<section id="content">
+										
+										
+									</section>
+
+							
 						
 					</div>
-				</section>
+				</div>
 
-			<!-- Five -->
-				<section id="five" class="wrapper style2 special fade">
-					<div class="container">
-						<header>
-							<h2>Magna faucibus lorem diam</h2>
-							<p>Ante metus praesent faucibus ante integer id accumsan eleifend</p>
-						</header>
-						<form method="post" action="#" class="container 50%">
-							<div class="row uniform 50%">
-								<div class="8u 12u$(xsmall)"><input type="email" name="email" id="email" placeholder="Your Email Address" /></div>
-								<div class="4u$ 12u$(xsmall)"><input type="submit" value="Get Started" class="fit special" /></div>
-							</div>
-						</form>
-					</div>
-				</section>
-
-			<!-- Footer -->
-				<footer id="footer">
-					<ul class="icons">
-						<li><a href="https://twitter.com/FSFTamilnadu" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="https://www.facebook.com/fsftn" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-						<li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-						
-					</ul>
-					
-				</footer>
+			
 
 		</div>
 
