--- a/app/views/test/take_test.html.erb
+++ b/app/views/test/take_test.html.erb
@@ -4,32 +4,16 @@
 <%= stylesheet_link_tag    "test", :media => "all" %>
 </head>
 <body>
-<div class="canvas">
-<div class="home_head">
-<img src="logo.png" style="margin-left:30px;margin-top:20px;height:150px;width:350px;">
-<div class="form">
-<form  method="post" action="checklogin.php">
-Username:
-<input type="text" name="username">
-<br>
-Password:
-<input type="password" name="password">
-<br><br>
-<input type="submit" value="Login">
-</form>
-<a href="signup.html">
-<span style="color:white">Need an account?</span>
-</a>
-</div>
-</div>
-<div class="menu_home">
-	<ul>
-		<li class="item"><a href="conc.html">Contact</a></li>
-		<li class="item"><a href="ask.html">Ask Us</a></li>
-		<li class="item"><a href="blog.html">Best Blogs</a></li>
-		<li class="item"><a href="must_visit.html">Must Visit</a></li>
-		<li class="item"><a href="home.html">Home</a></li>
-	</ul>	
+<div>
+<h1>Ready To Take Test?</h1>
+<BUTTON>Start Test</BUTTON>
+<% @ques.each do |post| %>
+    <h2><%= post.question %></h2>
+    <li><%= post.option1 %></li>
+    <li><%= post.option2 %></li>
+    <li><%= post.option3 %></li>
+    <li><%= post.option4 %></li>
+    
+<% end %>
 </div>
 </body>
-</html>
