--- a/app/views/home/open.html.erb
+++ b/app/views/home/open.html.erb
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
 		<%= stylesheet_link_tag    "scholarship", :media => "all" %>
+
 		
 	</head>
 	<body class="landing">
@@ -142,7 +143,10 @@
 					</div>
 				</section>
 				<div>
-				<a href="/users/sign_out" class="button special">Logout</a>
+				<br>
+				<br>
+				<br>
+				<%= link_to 'Logout', destroy_user_session_path %>
 				</div>
 			<!-- Footer -->
 				<footer id="footer">
