--- a/app/views/scholarship/form.html.erb
+++ b/app/views/scholarship/form.html.erb
@@ -4,7 +4,7 @@
 </head>
 <body>
 <div class="sign">
-<form style="margin-left:300px" action="sign.php" method="POST">
+<form style="margin-left:300px">
 <span style="font-size:30px;text-align:center;font-family:cambria;"><b>SCHOLARSHIP_FORM</b>
 <br><br>
 <font  size="5">
@@ -30,7 +30,7 @@ Email Id:&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
 <input type="text" name="email"/><br/>
 <br><br>
 </font>
-<input type="submit" value="Create Account"/>
+<a href="sub.html"><input type="submit" value="Request Scholarship"/></a>
 </form>
 </div>
 </body>
