--- a/app/views/scholarship/scholar.html.erb
+++ b/app/views/scholarship/scholar.html.erb
@@ -44,10 +44,12 @@
 							<div class="8u$ 12u$(medium) important(medium)">
 
 								<!-- Content -->
-									<section id="content">
-										
-										
-									</section>
+									<a href="/scholar/form.html"><p> CM Award </p></a>
+									<a href="/scholar/form.html"><p> Central Sector </p></a>
+									<a href="/scholar/form.html"><p> Anna Award </p></a>
+									<a href="/scholar/form.html"><p> SC/ST Scholarship </p></a>
+									<a href="/scholar/form.html"><p> Ambethkar Scholarship </p></a>
+										<%= @s.name %>
 
 							
 						
