--- a/app/views/scholarship/sub.html
+++ b/app/views/scholarship/sub.html
@@ -35,17 +35,19 @@
 				<div id="main" class="wrapper style1">
 					<div class="container">
 						<header class="major">
-							<h2>Test</h2>
+							<h2>Scholarships</h2>
 							
 						</header>
 						
-							
+							<p style="font-size:40px">Submitted Successfully!</p>
 							<div class="8u$ 12u$(medium) important(medium)">
 
 								<!-- Content -->
-									<h1>Ready To Take Test?</h1>
-
-									<BUTTON>Start Test</BUTTON>
+									<a href="/scholar/form.html"><p> CM Award </p></a>
+									<a href="/scholar/form.html"><p> Central Sector </p></a>
+									<a href="/scholar/form.html"><p> Anna Award </p></a>
+									<a href="/scholar/form.html"><p> SC/ST Scholarship </p></a>
+									<a href="/scholar/form.html"><p> Ambethkar Scholarship </p></a>
 
 							
 						
